# lit

./: Cargo.toml  IMPLEMENTATION_PLAN.md  Makefile  README.md  SPEC.md
src/: lib.rs  main.rs
src/cli/: add.rs  checkout.rs  clone.rs  commit.rs  cost.rs  debug.rs  diff.rs  init.rs  log.rs  mod.rs  patch.rs  pull.rs  push.rs  regenerate.rs  status.rs
src/core/: cache.rs  config.rs  dag.rs  generation_record.rs  generator.rs  mod.rs  patch.rs  prompt.rs  repo.rs  style.rs
src/providers/: anthropic.rs  mod.rs  openai.rs
tests/: api_integration_test.rs  demo_app_test.rs  workflow_test.rs
