[package]
name = "lit"
version = "0.1.0"
edition = "2024"
description = "Prompt-first version control — prompts are source, code is the artifact"
license = "MIT"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# Hashing
sha2 = "0.10"

# HTTP (LLM API calls)
reqwest = { version = "0.12", features = ["json"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Markdown parsing
comrak = "0.36"

# Diffing
similar = { version = "2", features = ["text"] }

# Git operations
git2 = "0.20"

# Error handling
anyhow = "1"
thiserror = "2"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Terminal output
colored = "3"

# Async trait
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"
